Add external argument test script and plate data prep script

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 References
 Thesis_write_up
+Proposal/WorkingDocuments
+*.pdf
 Analysis/Countries_Runs/Ecuador_CR/Plates
 Analysis/Countries_Runs/Ecuador_CR/HPC_results
 Analysis/Countries_Runs/Taiwan_Vietnam/Filtering
