Modify file structure

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,11 @@ References
 Thesis_write_up
 Proposal/WorkingDocuments
 *.pdf
-Analysis/Countries_Runs/Ecuador_CR/Plates
-Analysis/Countries_Runs/Ecuador_CR/HPC_results
-Analysis/Countries_Runs/Taiwan_Vietnam/Filtering
-Analysis/Countries_Runs/Taiwan_Vietnam/Plots
-Analysis/Countries_Runs/Taiwan_Vietnam/Data
-Analysis/Countries_Runs/Taiwan_Vietnam/qPCR_vs_MiSeq/TW_Bd_qpcr_miseq_comparison_Dirk.R
-Analysis/Countries_Runs/Taiwan_Vitenam/qPCR_vs_MiSeq/Plots
+Analysis/Runs_Countries/*/*/HPC_Results
+Analysis/Runs_Countries/Taiwan_Vietnam_2016/Taiwan/Filtering
+Analysis/Runs_Countries/Taiwan_Vietnam_2016/Taiwan/Plots
+Analysis/Runs_Countries/Taiwan_Vietnam_2016/Taiwan/Data
+Analysis/Runs_Countries/Taiwan_Vitenam_2016/Taiwan/qPCR_vs_MiSeq/Plots
 Analysis/UNITE_database
 .DS_Store
 .Rhistory
