Add .rds to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 References
 Thesis_write_up
 Proposal/WorkingDocuments
+*.rds
 *.pdf
+Analysis/Runs_Countries/*/Plate_Data.csv
 Analysis/Runs_Countries/*/SampleSheet.csv
 Analysis/Runs_Countries/*/*/HPC_Results
 Analysis/Runs_Countries/Taiwan_Vietnam_2016/Taiwan/Filtering
