--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,19 @@
 References
 Thesis_write_up
 Proposal/WorkingDocuments
+*.txt
 *.rds
 *.pdf
 Analysis/Runs_Countries/*/Plate_Data.csv
 Analysis/Runs_Countries/*/SampleSheet.csv
-Analysis/Runs_Countries/*/*/DADA2_Results/
-Analysis/Runs_Countries/*/*/Esto_Results/
+Analysis/Runs_Countries/*/DADA2_Results/*/HPC_outputs/
+Analysis/Runs_Countries/*/Esto_Results/*
 Analysis/Runs_Countries/Taiwan_Vietnam_2016/Taiwan/Filtering
 Analysis/Runs_Countries/Taiwan_Vietnam_2016/Taiwan/Plots
 Analysis/Runs_Countries/Taiwan_Vietnam_2016/Taiwan/Data
 Analysis/Runs_Countries/Taiwan_Vitenam_2016/Taiwan/qPCR_vs_MiSeq/Plots
+Analysis/NCBI_database/
+Analysis/Results/
 Analysis/UNITE_database
 .DS_Store
 .Rhistory
