--- a/.gitignore
+++ b/.gitignore
@@ -4,16 +4,22 @@ Proposal/WorkingDocuments
 *.txt
 *.rds
 *.pdf
-Analysis/Runs_Countries/*/Plate_Data.csv
-Analysis/Runs_Countries/*/SampleSheet.csv
-Analysis/Runs_Countries/*/DADA2_Results/*/HPC_outputs/
-Analysis/Runs_Countries/*/Esto_Results/*
-Analysis/Runs_Countries/Taiwan_Vietnam_2016/Taiwan/Filtering
-Analysis/Runs_Countries/Taiwan_Vietnam_2016/Taiwan/Plots
-Analysis/Runs_Countries/Taiwan_Vietnam_2016/Taiwan/Data
-Analysis/Runs_Countries/Taiwan_Vitenam_2016/Taiwan/qPCR_vs_MiSeq/Plots
-Analysis/NCBI_database/
+Analysis/Original_Data/
+Analysis/Runs_Countries/
 Analysis/Results/
-Analysis/UNITE_database
+Analysis/UNITE_database/
+Analysis/Generalised_Scripts/Sandbox/
+Analysis/Generalised_Scripts/Processing/run_fasttree.sh
+Analysis/Generalised_Scripts/Processing/fast_tree_subset.R
+Analysis/Generalised_Scripts/Processing/phylogenetic_trees.R
+Analysis/Generalised_Scripts/Processing/phylogenetic_tree_prep.R
+Analysis/Generalised_Scripts/Processing/DADA2_data_filtering_TW16.R
+Analysis/Generalised_Scripts/Processing/sample_seq_prep_TW16.sh
+Analysis/Generalised_Scripts/Processing/split_TW16.sh
+Analysis/Generalised_Scripts/Analysis/alpha_diversity.R
+Analysis/Generalised_Scripts/Analysis/tree_plotting.R
+Analysis/Generalised_Scripts/Analysis/cooccur.R
+Analysis/Generalised_Scripts/Analysis/cooccur_analysis.R
+Analysis/Generalised_Scripts/Analysis/ilr_transform.R
 .DS_Store
 .Rhistory
