--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
 *.txt
 *.rds
 *.pdf
-Analysis/Generalised_Scripts/Sandbox/
-Analysis/Generalised_Scripts/Processing/run_fasttree.sh
-Analysis/Generalised_Scripts/Processing/fast_tree_subset.R
-Analysis/Generalised_Scripts/Processing/phylogenetic_trees.R
-Analysis/Generalised_Scripts/Processing/phylogenetic_tree_prep.R
-Analysis/Generalised_Scripts/Processing/DADA2_data_filtering_TW16.R
-Analysis/Generalised_Scripts/Processing/sample_seq_prep_TW16.sh
-Analysis/Generalised_Scripts/Processing/split_TW16.sh
-Analysis/Generalised_Scripts/Analysis/alpha_diversity.R
-Analysis/Generalised_Scripts/Analysis/tree_plotting.R
-Analysis/Generalised_Scripts/Analysis/cooccur_analysis.R
-Analysis/Generalised_Scripts/Analysis/ilr_transform.R
+Sandbox/
+Processing/run_fasttree.sh
+Processing/fast_tree_subset.R
+Processing/phylogenetic_trees.R
+Processing/phylogenetic_tree_prep.R
+Processing/DADA2_data_filtering_TW16.R
+Processing/sample_seq_prep_TW16.sh
+Processing/split_TW16.sh
+Analysis/alpha_diversity.R
+Analysis/tree_plotting.R
+Analysis/cooccur_analysis.R
+Analysis/ilr_transform.R
 .DS_Store
 .Rhistory
